# duo-finance

./: .gitignore  Justfile  pyproject.toml  script.py  tailwind.config.js
cash_flow/: __init__.py  admin.py  models.py  urls.py  views.py
cash_flow/migrations/: 0001_initial.py
cash_flow/templates/: base.html.j2  home.html.j2
cash_flow/templates/components/: aside.html.j2  nav.html.j2
cash_flow/templates/contents/: alertas.html.j2  configuracoes.html.j2  contas.html.j2  dashboard.html.j2  home.html.j2  investimentos.html.j2  login.html.j2  metas.html.j2  relatorios.html.j2  transacoes.html.j2
financial/: asgi.py  settings.py  urls.py  wsgi.py
